--- a/sprint-1/styles/main.css
+++ b/sprint-1/styles/main.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: "Avenir-Regular";
+  src: url("../assets/Fonts/Linotype - AvenirNextLTPro-Regular.otf");
+}
+
+@font-face {
+  font-family: "Avenir-Bold";
+  src: url("../assets/Fonts/Linotype - AvenirNextLTPro-Bold.otf");
+}
+
+@font-face {
+  font-family: "Avenir-Demi";
+  src: url("../assets/Fonts/Linotype - AvenirNextLTPro-Demi.otf");
+}
+
 .main__hero {
   background-image: url(../images/Images/hero-bandsite.jpg);
   background-size: cover;
