--- a/sprint-1/styles/main.css
+++ b/sprint-1/styles/main.css
@@ -18,14 +18,31 @@
 }
 
 .main__nav-bar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   background-color: #323232;
+}
+
+@media screen and (min-width: 0px) and (max-width: 425px) {
+  .main__nav-bar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__header-org {
+    height: 80px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__header-org {
+    height: 80px;
+  }
 }
 
 .main__logo-link {
@@ -38,7 +55,7 @@
   padding: 5%;
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__logo-link {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -54,26 +71,26 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__nav-bar-list {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-size: 14px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__nav-bar-list {
     font-size: 16px;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .main__nav-bar-list {
     font-size: 16px;
   }
@@ -93,35 +110,52 @@
   background-position: center;
 }
 
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__hero {
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__hero {
+    height: 670px;
+  }
+}
+
 .main__hero-title {
-  padding: 10% 5%;
   color: white;
   background-color: rgba(50, 50, 50, 0.5);
   font-family: "Avenir-Bold";
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__hero-title {
     font-size: 24px;
     line-height: 32px;
+    padding: 10% 5%;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__hero-title {
+    font-size: 60px;
+    line-height: 68px;
+    padding: 15% 5%;
+  }
+}
+
+@media screen and (min-width: 769px) {
   .main__hero-title {
     font-size: 60px;
     line-height: 68px;
   }
 }
 
-@media screen and (min-width: 1025px) {
-  .main__hero-title {
-    font-size: 60px;
-    line-height: 68px;
-  }
+.main__wrap {
+  padding: 32px 16px;
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__wrap {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -131,7 +165,6 @@
             justify-content: center;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    padding: 32px 16px;
   }
 }
 
@@ -139,45 +172,45 @@
   font-family: "Avenir-Bold";
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__info-title {
     font-size: 24px;
     line-height: 32px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__info-title {
     font-size: 36px;
     line-height: 44px;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .main__info-title {
     font-size: 36px;
     line-height: 44px;
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__bio-image {
     width: 288px;
     height: 145px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__bio-image {
-    width: 720px;
-    height: 362px;
+    width: 90%;
+    height: 10%;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .main__bio-image {
-    width: 896px;
-    height: 450px;
+    width: 95%;
+    height: 15%;
   }
 }
 
@@ -185,21 +218,21 @@
   font-family: "Avenir-Demi";
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__info-quote {
     font-size: 14px;
     line-height: 22px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__info-quote {
     font-size: 24px;
     line-height: 32px;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .main__info-quote {
     font-size: 24px;
     line-height: 32px;
@@ -210,21 +243,21 @@
   font-family: "Avenir-Demi";
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__info-quote-person {
     font-size: 14px;
     line-height: 22px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__info-quote-person {
     font-size: 24px;
     line-height: 32px;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .main__info-quote-person {
     font-size: 24px;
     line-height: 32px;
@@ -235,45 +268,94 @@
   font-family: "Avenir-Demi";
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__info-bio-title {
     font-size: 14px;
     line-height: 22px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__info-bio-title {
     font-size: 24px;
     line-height: 32px;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .main__info-bio-title {
     font-size: 24px;
     line-height: 32px;
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__para-location {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__info-bio-one {
+    margin-right: 24px;
+  }
+}
+
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__para-size {
     font-size: 13px;
     line-height: 18px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__para-size {
     font-size: 14px;
     line-height: 22px;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .main__para-size {
     font-size: 14px;
     line-height: 22px;
+  }
+}
+
+.main__gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (min-width: 0px) and (max-width: 425px) {
+  .main__gallery {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__gallery {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main__gallery {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
@@ -281,28 +363,39 @@
   font-family: "Avenir-Bold";
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__gallery-title {
     font-size: 24px;
     line-height: 32px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__gallery-title {
+    font-size: 36px;
+    line-height: 44px;
+    margin-left: 32px;
+  }
+}
+
+@media screen and (min-width: 769px) {
   .main__gallery-title {
     font-size: 36px;
     line-height: 44px;
   }
 }
 
-@media screen and (min-width: 1025px) {
-  .main__gallery-title {
-    font-size: 36px;
-    line-height: 44px;
-  }
+.main__gallery-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__gallery-image {
     width: 288px;
     height: 162px;
@@ -310,17 +403,17 @@
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__gallery-image {
-    width: 224px;
-    height: 126px;
+    width: 26%;
+    margin: 24px;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .main__gallery-image {
-    width: 344px;
-    height: 193px;
+    width: 30%;
+    margin: 24px;
   }
 }
 
@@ -330,61 +423,83 @@
   padding: 5%;
 }
 
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__footer-first-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
 .main__footer-header {
   font-family: "Avenir-Bold";
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__footer-header {
     font-size: 24px;
     line-height: 32px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__footer-header {
     font-size: 36px;
     line-height: 44px;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .main__footer-header {
     font-size: 36px;
     line-height: 44px;
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__footer-icon-padding {
     padding-left: 6%;
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__footer-logo {
     display: none;
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .main__footer-info-holder {
     font-size: 13px;
     line-height: 18px;
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .main__footer-info-holder {
     font-size: 14px;
     line-height: 20px;
   }
 }
 
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 769px) {
   .main__footer-info-holder {
     font-size: 14px;
     line-height: 20px;
+  }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+  .main__footer-second-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
