--- a/sprint-1/styles/main.scss
+++ b/sprint-1/styles/main.scss
@@ -177,6 +177,7 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         @include desktop() {
             font-size: $hero-header-text-desk;
             line-height: $hero-header-line-desk;
+            padding: 20% 10%;
         }
     }
 
@@ -187,6 +188,10 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
+        }
+
+        @include desktop() {
+            padding: 32px 142px;
         }
     }
 
@@ -288,6 +293,10 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         @include tablet() {
             display: flex;
         }
+
+        @include desktop() {
+            display: flex;
+        }
     }
 
     &__info-bio-one {
@@ -368,7 +377,7 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         }
 
         @include desktop() {
-            width: 30%;
+            width: 27%;
             margin: 24px;
         }
     }
@@ -383,6 +392,15 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         @include tablet() {
             display: flex;
             justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        @include desktop() {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
         }
     }
 
@@ -395,6 +413,8 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
         }
 
         @include tablet() {
+            display: flex;
+            margin: 0;
             font-size: $header-one-text-desk;
             line-height: $header-one-line-desk;
         }
@@ -436,6 +456,11 @@ $desktop-width: "screen and (min-width: #{$max-tablet-width})";
 
     &__footer-second-section {
         @include tablet() {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        @include desktop() {
             display: flex;
             justify-content: space-between;
         }
